[gd_scene load_steps=7 format=3 uid="uid://gn7806oog6qo"]

[ext_resource type="Texture2D" uid="uid://px17kflnvnd7" path="res://ui/assets/icons/slot_left.svg" id="1_y5116"]
[ext_resource type="Texture2D" uid="uid://bexlgpgwakbrr" path="res://ui/assets/icons/slot_right.svg" id="2_tyh3j"]
[ext_resource type="Script" path="res://nodes/character_node/character_node.gd" id="3_3dcof"]
[ext_resource type="StyleBox" uid="uid://bmb6fo20hn20m" path="res://ui/theme_default/node_value.stylebox" id="4_4reyd"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ryo67"]
content_margin_left = 10.0
content_margin_top = 2.0
content_margin_right = 10.0
content_margin_bottom = 2.0
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="LabelSettings" id="LabelSettings_5hm62"]
font_color = Color(0.572549, 0.572549, 0.572549, 1)

[node name="CharacterNode" type="GraphNode" groups=["graph_nodes"]]
custom_minimum_size = Vector2(400, 0)
offset_right = 400.0
offset_bottom = 82.0
size_flags_vertical = 0
mouse_default_cursor_shape = 2
theme_override_styles/titlebar = SubResource("StyleBoxFlat_ryo67")
title = "NodeCharacter"
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = ExtResource("1_y5116")
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = ExtResource("2_tyh3j")
slot/0/draw_stylebox = false
script = ExtResource("3_3dcof")
titlebar_color = Color(0, 0.505882, 0.501961, 1)

[node name="CharacterContainer" type="MarginContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CharacterContainer"]
layout_mode = 2

[node name="CharacterLabel" type="Label" parent="CharacterContainer/HBoxContainer"]
layout_mode = 2
text = "Character"

[node name="ActionTypeLabel" type="Label" parent="CharacterContainer/HBoxContainer"]
layout_mode = 2
theme_override_styles/normal = ExtResource("4_4reyd")
text = "Join"
label_settings = SubResource("LabelSettings_5hm62")

[node name="DisplayContainer" type="HBoxContainer" parent="CharacterContainer/HBoxContainer"]
layout_mode = 2

[node name="AtLabel" type="Label" parent="CharacterContainer/HBoxContainer/DisplayContainer"]
layout_mode = 2
text = "at"

[node name="PositionLabel" type="Label" parent="CharacterContainer/HBoxContainer/DisplayContainer"]
layout_mode = 2
theme_override_styles/normal = ExtResource("4_4reyd")
text = "Left"
label_settings = SubResource("LabelSettings_5hm62")

[connection signal="resize_request" from="." to="." method="_on_GraphNode_resize_request"]
